--- a/report/report.tex
+++ b/report/report.tex
@@ -114,16 +114,39 @@
 \fancyfoot[LE,LO]{\footerfont\fontsize{9}{11}\selectfont \textcolor{footerc}{\textbf{\thepage~$|$}}~\textcolor{footerc1}{\footerfont\so{\texttt{Page}}}} % \fontfamily{ppl}\selectfont
 
 \section{Introduction}
-\lipsum[1-5]
-\section{Introduction1}
-\lipsum[1-5]
-\section{Introduction2}
-\lipsum[1-5]
-\subsection{lo1}
-\lipsum[1-4]
-\subsubsection{lo2}
-\lipsum[1-2]~\citep{articleExample}
-\lipsum[3]
+Do graph colouring in classification\\
+Do live graph printing in python\\
+Weka classification\\
+do graph\\
+report\\
+presentation template\\
+code cleaning\\
+\subsection{What is CEP?}
+\subsection{What is CEP???}
+\subsection{Why to use it?}
+\subsection{Applications}
+\subsection{Examples}
+\subsubsection{Nuclear plant}
+\subsubsection{CEP at CERN}
+
+\section{Model of processing}
+add a graph here\\
+\subsection{Esper engine}
+\subsection{Generators / signals}
+\subsection{Feature extraction}
+\subsection{Listeners for change}
+\subsection{Clustering with Afinity Propagation}
+\subsection{Printing / GUI}
+
+
+\section{Results and comparison}
+\subsection{why particulat algorithms were chosen}
+\subsection{WEKA algorithms review}
+lol~\citep{articleExample}
+
+\section{Lookahead}
+
+\section{Conclusions}
 
 % \begin{center} \noindent \line(1,0){250} \end{center}	  % Optional ending line
 
