--- a/report/report.tex
+++ b/report/report.tex
@@ -116,13 +116,10 @@
 \section{Introduction}
 
 
-report\\
-presentation template\\
-
-
 Weka classification\\
 Do graph colouring in classification\\
 
+Afinity Propoagation\\
 
 \subsection{What is CEP?}
 \subsection{What is CEP???}
