Sine wave faster and more reliable.

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -11,3 +11,10 @@
   note    = {An optional note}, 
   volume  = 4
 }
+
+@article{zhang2013data,
+  title={Data Stream Clustering with Affinity Propagation},
+  author={Zhang, Xiangliang and Furtlehner, Cyril and Germain-Renaud, C{\'e}cile and Sebag, Michele},
+  year={2013},
+  publisher={IEEE}
+}
