--- a/report/report.tex
+++ b/report/report.tex
@@ -76,6 +76,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage[inkscape={inkscap‌​e -z -C}]{svg}
 
 \begin{document}
 
@@ -116,7 +117,7 @@
 \section{Introduction}
 
 
-Weka classification\\
+Weka classification~\citep{zhang2013data}\\
 Do graph colouring in classification\\
 
 Afinity Propoagation\\
@@ -130,12 +131,25 @@ Afinity Propoagation\\
 \subsubsection{CEP at CERN}
 
 \section{Model of processing}
-add a graph here\\
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\textwidth]{./gfx/APC.pdf}
+  \caption{APC}
+\end{figure}
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\textwidth]{./gfx/model.pdf}
+  \caption{Model}
+\end{figure}
+
 \subsection{Esper engine}
 \subsection{Generators / signals}
 \subsection{Feature extraction}
 \subsection{Listeners for change}
 \subsection{Clustering with Afinity Propagation}
+Do the algorithm!\\
+
 \subsection{Printing / GUI}
 
 
