Presentation gfx added.

--- a/report/report.tex
+++ b/report/report.tex
@@ -180,7 +180,7 @@ In this example we consider signals as all the real time price processes. We fil
 
 \section{Model of processing}
 To begin with, I describe model of processing adapted in the application, presented in the \textit{Figure~\ref{fig:model}}.\\
-We divide model into two branches: \emph{Offline resources} and \emph{Live Data Processing}. The first one consists of EPL file (see \textit{Listing~\ref{lst:EPL}}), that defines the features to be extracted form the signal.
+We divide model into two branches: \emph{Offline resources} and \emph{Live Data Processing}. The first one consists of EPL file (see \textit{Listing~\ref{lst:EPL}}), that defines the features to be extracted form the given signal; CSV file which serves as a data dump; and finally data reconstruction script, which plots.\\
 
 \begin{figure}[htbp]
 	\centering
