--- a/report/report.tex
+++ b/report/report.tex
@@ -195,6 +195,7 @@ We divide model into two branches: \emph{Offline resources} and \emph{Live Data 
   \caption{Data processing model.\label{fig:model}}
 \end{figure}
 
+\vspace{1em}
 \lstset{
   captionpos=b,
   frame=single,
