--- a/report/report.tex
+++ b/report/report.tex
@@ -245,12 +245,12 @@ A number of signal generators is implemented to test the framework:
 	\item \emph{uniform} distribution generator,
 	\item \emph{multivariate normal} distribution generator.
 \end{itemize}
-In generators the time between samples is distributed according to \emph{Poisson} distribution.\\
+In generators the time between samples is distributed according to \emph{Poisson} distribution to simulate pseudo-random signal occurrence.\\
 
-The package also contains module reading temperature data from the electronic thermometer placed at CERN Prévessin site, and Yahoo! weather forecast feed for the same location. Both of them can be used as signal providers for the application.
+The package also contains module, reading temperature data from the electronic thermometer placed at CERN Prévessin site, and Yahoo! weather forecast feed for the same location. Both of them can be used as signal providers for the application.
 
 \subsection{\texttt{Esper} engine}
-describe the engine\\
+The \texttt{Esper} engine runs in the background gathering signals from all indicated by user sources. It filters all this incoming data with \texttt{EPL} rules.
 
 \subsection{Rules---Feature extraction}
 give file with rules here
@@ -289,8 +289,7 @@ describe python script to vizualise the data\\
 
 
 \section{Results and comparison}
-Describe results of AP clustering
-
+Describe results of AP clustering --- not given.
 \subsection{why particulat algorithms were chosen}
 \subsection{WEKA algorithms review}
 
