General work on affinity.

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -59,9 +59,9 @@
 
 \begin{document}
 
-\title{Presentation Title}  
-\author{Author's Name}
-\institute{Author's Institute/Section}
+\title{Making sense of data streams: Complex Event Processing for Controls Applications}  
+\author{Kacper B. sokol}
+\institute{CERN, EN/ICE}
 \date{\today}
 
 \begin{frame}[plain]
@@ -75,15 +75,15 @@
 
 %%%% CONTENT %%%%
 
-\section{Section 1} 
-  \subsection{Subsection 1.1}
+\section{Background} 
+  \subsection{Signals}
   \begin{frame}
-    \frametitle{Title 1} 
+    \frametitle{Data Points} 
     \lipsum[1]~\cite{articleExample}
   \end{frame}
 
   \begin{frame}
-    \frametitle{Title 2} 
+    \frametitle{Data Points in time}
     \lipsum[2]
   \end{frame}
 
