--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -144,19 +144,23 @@
   \end{frame}
 
   \begin{frame}[foot]
-    \frametitle{avg | std | $1$-lag}
+    \frametitle{\texttt{avg}}
     \begin{figure}
-      \vspace*{-2em}
-      {
-      \hspace*{-2em}
-      {{
-      \includegraphics[scale=.28]{./gfx/feature1.png}
-      \hspace*{0.1em}
-      \includegraphics[scale=.28]{./gfx/feature2.png}
-      }
-      \vspace*{-1em}
-      \includegraphics[scale=.28]{./gfx/feature3.png}
-      }}
+      \includegraphics[scale=.5]{./gfx/feature1.png}
+    \end{figure}
+  \end{frame}
+
+  \begin{frame}[foot]
+    \frametitle{\texttt{std}}
+    \begin{figure}
+      \includegraphics[scale=.5]{./gfx/feature2.png}
+    \end{figure}
+  \end{frame}
+
+  \begin{frame}[foot]
+    \frametitle{\texttt{$1$-lag}}
+    \begin{figure}
+      \includegraphics[scale=.5]{./gfx/feature3.png}
     \end{figure}
   \end{frame}
 
